apps/applications/home/mealie/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie-service
  namespace: home
spec:
  selector:
    app: mealie
  ports:
    - name: web-ui
      port: 9000
