apps/applications/home/mealie/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mealie-route
  namespace: home
spec:
  parentRefs:
    - name: internal-gateway
      namespace: traefik
  hostnames:
    - "recipes.kerrlab.app"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: mealie-service
          port: 9000
